--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="container">
             <h1 class="hero-title">Effective Solutions
                 for Your Business</h1>
-                <button type="button" class="hero-button">Order Service</button>
+                <button type="button" class="hero-button" data-modal-open>Order Service</button>
             </div>
         </section>
       
@@ -454,5 +454,12 @@
   </div>
     </footer>
 
+
+    <div class="backdrop" data-modal>
+      <div class="modal">
+<button type="button" class="modal-close-btn" data-modal-close>close</button>
+      </div>
+    </div>
+<script src="./js/modal.js"></script>
 </body>
 </html>
