--- a/index.html
+++ b/index.html
@@ -451,7 +451,18 @@
         </ul>
 
     </div>
+  
+    <p class="text-subscribe">Subscribe</p>
+    <form class="footer-form">
+      
+      <input type="email" name="footer-email" id="footer-email" class="footer-input" placeholder="E-mail">
+      <button type="submit" class="footer-btn">Subscribe <svg class="telegram" width="24" height="20">
+        <use href="./images/icons.svg#icon-telegram"></use>
+      </svg></button>
+    </form>
+ 
   </div>
+ 
     </footer>
 
 
@@ -465,7 +476,7 @@
 <p class="title">Leave your contacts and we will call you back</p>
 <form>
   <div class="modal-field">
-    <label for="user-name">Name</label>
+    <label for="user-name" class="text-label">Name</label>
     <div class="modal-field-wrap">
   <input type="text" class="modal-input" name="user-name" id="user-name">
   <svg class="modal-icon" width="18" height="18">
@@ -474,7 +485,7 @@
 </div>
 </div>
 <div class="modal-field">
-  <label for="user-tel">Phone</label>
+  <label for="user-tel" class="text-label">Phone</label>
   <div class="modal-field-wrap">
   <input type="tel" class="modal-input" name="user-tel" id="user-tel">
   <svg class="modal-icon" width="18" height="24">
@@ -483,7 +494,7 @@
 </div>
 </div>
 <div class="modal-field">
-  <label for="user-email">Email</label>
+  <label for="user-email" class="text-label">Email</label>
   <div class="modal-field-wrap">
   <input type="email" class="modal-input" name="user-email" id="user-email">
   <svg class="modal-icon" width="18" height="24">
@@ -492,8 +503,14 @@
 </div>
 </div>
 <div class="modal-field">
-  <label for="user-text">Comment</label>
+  <label for="user-text" class="text-label">Comment</label>
   <textarea name="user-text" id="user-text" class="modal-comment" placeholder="Text input"></textarea>
+</div>
+<div class="modal-field">
+  <input type="checkbox" name="agreement" class="modal-check visually-hidden" id="agreement" value="true">
+  <label for="agreement" class="modal-check-text"><span><svg class="" width="10" height="8">
+    <use href="./images/icons.svg#icon-check"></use>
+  </svg></span> I accept the terms and conditions of the<a class="text-link" href="./index.html">Privacy Policy</a></label>
 </div>
   <button type="submit">Send</button>
 </form>
