--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
     <use href="./images/icons.svg#icon-check"></use>
   </svg></span> I accept the terms and conditions of the<a class="text-link" href="./index.html">Privacy Policy</a></label>
 </div>
-  <button type="submit">Send</button>
+  <button type="submit" class="btn-send">Send</button>
 </form>
       </div>
     </div>
