--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
     <label for="user-name" class="text-label">Name</label>
     <div class="modal-field-wrap">
   <input type="text" class="modal-input" name="user-name" id="user-name">
-  <svg class="modal-icon" width="18" height="18">
+  <svg class="modal-icon" width="18" height="24">
     <use href="./images/icons.svg#icon-person"></use>
   </svg>
 </div>
@@ -503,12 +503,12 @@
 </div>
 </div>
 <div class="modal-field">
-  <label for="user-text" class="text-label">Comment</label>
-  <textarea name="user-text" id="user-text" class="modal-comment" placeholder="Text input"></textarea>
+  <label for="user-comment" class="text-label">Comment</label>
+  <textarea name="user-comment" id="user-comment" class="modal-comment" placeholder="Text input"></textarea>
 </div>
 <div class="modal-field">
-  <input type="checkbox" name="agreement" class="modal-check visually-hidden" id="agreement" value="true">
-  <label for="agreement" class="modal-check-text"><span><svg class="" width="10" height="8">
+  <input type="checkbox" name="user-privacy" class="modal-check visually-hidden" id="user-privacy" value="true">
+  <label for="user-privacy" class="modal-check-text"><span class="primacy-span"><svg class="" width="10" height="8">
     <use href="./images/icons.svg#icon-check"></use>
   </svg></span> I accept the terms and conditions of the<a class="text-link" href="./index.html">Privacy Policy</a></label>
 </div>
