--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
   </svg>
 </div>
 </div>
-<div class="modal-field">
+<div class="modal-field comment">
   <label for="user-comment" class="text-label">Comment</label>
   <textarea name="user-comment" id="user-comment" class="modal-comment" placeholder="Text input"></textarea>
 </div>
