--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
   <label for="user-comment" class="text-label">Comment</label>
   <textarea name="user-comment" id="user-comment" class="modal-comment" placeholder="Text input"></textarea>
 </div>
-<div class="modal-field">
+<div class="modal-field privacy">
   <input type="checkbox" name="user-privacy" class="modal-check visually-hidden" id="user-privacy" value="true">
   <label for="user-privacy" class="modal-check-text"><span class="primacy-span"><svg class="" width="10" height="8">
     <use href="./images/icons.svg#icon-check"></use>
