--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
 </div>
 <div class="modal-field privacy">
   <input type="checkbox" name="user-privacy" class="modal-check visually-hidden" id="user-privacy" value="true">
-  <label for="user-privacy" class="modal-check-text"><span class="primacy-span"><svg class="" width="10" height="8">
+  <label for="user-privacy" class="modal-check-text"><span class="privacy-span"><svg class="" width="10" height="8">
     <use href="./images/icons.svg#icon-check"></use>
   </svg></span> I accept the terms and conditions of the<a class="text-link" href="./index.html">Privacy Policy</a></label>
 </div>
