--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
         </ul>
 
     </div>
-  
+  <div class="div-form">
     <p class="text-subscribe">Subscribe</p>
     <form class="footer-form">
       
@@ -460,7 +460,7 @@
         <use href="./images/icons.svg#icon-telegram"></use>
       </svg></button>
     </form>
- 
+ </div>
   </div>
  
     </footer>
