--- a/index.html
+++ b/index.html
@@ -454,9 +454,9 @@
   <div class="div-form">
     <p class="text-subscribe">Subscribe</p>
     <form class="footer-form">
-      
+      <label for="footer-email"></label>
       <input type="email" name="footer-email" id="footer-email" class="footer-input" placeholder="E-mail">
-      <button type="submit" class="footer-btn">Subscribe <svg class="telegram" width="24" height="20">
+      <button type="submit" class="footer-btn">Subscribe <svg class="telegram" width="24" height="24">
         <use href="./images/icons.svg#icon-telegram"></use>
       </svg></button>
     </form>
