--- a/index.html
+++ b/index.html
@@ -452,11 +452,11 @@
 
     </div>
   <div class="div-form">
-    <p class="text-subscribe">Subscribe</p>
+    <p class="footer-sub">Subscribe</p>
     <form class="footer-form">
-      <label for="footer-email"></label>
-      <input type="email" name="footer-email" id="footer-email" class="footer-input" placeholder="E-mail">
-      <button type="submit" class="footer-btn">Subscribe <svg class="telegram" width="24" height="24">
+      <label for="footer-label"></label>
+      <input type="email" name="footer-input" class="footer-input" placeholder="E-mail">
+      <button type="submit" class="footer-btn">Subscribe <svg class="icon-button" width="24" height="24">
         <use href="./images/icons.svg#icon-telegram"></use>
       </svg></button>
     </form>
